--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --progress -p",
-    "start": "webpack-dev-server --progress -p"
+    "dev-server": "webpack-dev-server --progress -p"
   },
   "license": "ISC",
   "dependencies": {
@@ -22,26 +22,28 @@
     "file-loader": "^0.10.1",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.8.0",
-    "react": "^15.1.0",
+    "react": "^15.5.4",
     "react-addons-test-utils": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-redux": "^4.4.5",
+    "react-dom": "^15.5.4",
+    "react-redux": "^4.4.8",
     "react-router-dom": "^4.0.0-beta.7",
-    "redux": "^3.5.2",
+    "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
     "roboto-fontface": "^0.7.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.11.0"
+    "webpack": "^2.3.3",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^1.16.3",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-stage-0": "^6.5.0",
-    "react-transform-hmr": "^1.0.4"
+    "react-transform-hmr": "^1.0.4",
+    "webpack": "^2.3.3",
+    "webpack-dev-middleware": "^1.10.1"
   }
 }
