--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.10.4",
+    "babel-eslint": "^7.2.2",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
@@ -18,10 +19,15 @@
     "base64-image-loader": "^1.2.0",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
+    "eslint": "^3.19.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-react": "^6.10.3",
     "expect": "^1.20.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.8.0",
+    "postcss-loader": "^1.3.3",
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.5.4",
